--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.10.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.5.7",
+    "@types/nodemailer": "^6.4.14",
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
-    "next": "^14.0.2",
+    "next": "^14.1.3",
     "next-auth": "^5.0.0-beta.13",
+    "nodemailer": "^6.9.11",
     "pg": "^8.11.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
