--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.0.0",
+    "hangul-js": "^0.2.6",
     "next": "^14.1.3",
     "next-auth": "^5.0.0-beta.13",
     "nodemailer": "^6.9.11",
