--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.10.2",
-    "@tailwindcss/forms": "^0.5.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.5.7",
     "@types/nodemailer": "^6.4.14",
@@ -36,6 +35,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/bcrypt": "^5.0.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.14",
