--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/nodemailer": "^6.4.14",
     "@vercel/postgres": "^0.5.1",
     "autoprefixer": "10.4.15",
+    "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
