--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hangul-js": "^0.2.6",
     "next": "^14.1.3",
     "next-auth": "^5.0.0-beta.13",
+    "next-themes": "^0.3.0",
     "nodemailer": "^6.9.11",
     "pg": "^8.11.3",
     "postcss": "8.4.31",
