--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.0.18",
     "@prisma/client": "^5.10.2",
     "@types/bcryptjs": "^2.4.6",
